--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+/*Variables*/
+$font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+
+/*Paleta de colores*/
+$principal: #cce1de
+$principalOscuro: #dbf0ed
+
+$secundario: #d6e1c7
+$secundarioOscuro: #a5af96
+
+$footer: #b9967d
+$footerClaro: #dccabe
+$header: #e4cfc0
+$headerOscuro: #b9967d
+
+$opciones: #e2da7a
+$opcionesOscuro: #d3c743
+
+$opciones2: #79fb7e
+$opciones2Claro: #acfea9
+$background: #E8EBEB
+
+$oscuro: #191919
+$oscuroClaro: #2b2b2b
+
+/*Se reinicia el html*/
+body
+    font-family: $font
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+    color: $oscuro
