--- a/src/app/components/platillos/item-platillo/item-platillo.component.sass
+++ b/src/app/components/platillos/item-platillo/item-platillo.component.sass
@@ -15,6 +15,10 @@ a
     text-decoration: none
     color: white
 
+.opacidad p
+    background-color: rgba(17, 17, 17, .5)
+    padding: .25rem 0
+
 /*Para los platillos*/
 .card
     @extend %resolucion
@@ -27,7 +31,7 @@ a
         transform: scale(1.1)
     
 .opacidad
-    background-color: rgba(17, 17, 17, .7)
+    background-color: rgba(17, 17, 17, .6)
     padding: 2rem 0
     font-size: 1.4rem
     text-transform: uppercase
@@ -37,7 +41,7 @@ a
     color: white
 
     &:hover
-        background-color: rgba(17, 17, 17, .3)
+        background-color: rgba(17, 17, 17, .2)
 
 /*Footer*/
 .card__footer
