--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,20 +1,26 @@
 <div class="footer">
     <div class="enlaces">
         <div class="relleno">
-            <a href="https://www.instagram.com/franhdez22/" target="_blank">
+            <a href="https://www.instagram.com/franhdez22/" target="_blank" title="Cuenta de Instagram">
                 <img src="../../../assets/img/instagram.svg" alt="Enlace de instagram"/>
             </a>
         </div>
 
         <div class="relleno">
-            <a href="https://twitter.com/fran_hdez97" target="_blank">
+            <a href="https://twitter.com/fran_hdez97" target="_blank" title="Cuenta de Twitter">
                 <img src="../../../assets/img/twitter.svg" alt="Enlace de twitter"/>
             </a>
         </div>
 
         <div class="relleno">
-            <a href="https://www.facebook.com/franhdez97/" target="_blank">
+            <a href="https://www.facebook.com/franhdez97/" target="_blank" title="Cuenta de Facebook">
                 <img src="../../../assets/img/facebook.svg" alt="Enlace de facebook"/>
+            </a>
+        </div>
+
+        <div class="relleno">
+            <a href="https://play.google.com/store/apps/dev?id=4671468562820203222" target="_blank" title="Cuenta de Playstore">
+                <img src="../../../assets/img/playstore.svg" alt="Enlace de playstore"/>
             </a>
         </div>
     </div>
