--- a/src/app/shared/footer/footer.component.sass
+++ b/src/app/shared/footer/footer.component.sass
@@ -14,7 +14,11 @@
     @extend %color_fuente
 
 .parrafos
-    text-align: center
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: start
+    padding: 0 .5rem
 
 .parrafos__descripcion
     text-transform: uppercase
@@ -35,11 +39,21 @@
 .relleno
     display: flex
     align-items: center
-    margin: 0 .5rem
+    margin: 0 1rem
 
 .enlaces
     display: flex
-    justify-content: center
+    flex-direction: column
+    align-items: center
+    padding: .5rem 0
+
+@media (min-width: 600px)
+    .enlaces
+        justify-content: center
+        flex-direction: row
+    .parrafos
+        justify-content: center
+        align-items: center
 
 /*Fin Enlaces*/
 
