listado de comidas lista

--- a/src/app/components/platillos/detalle-platillo/detalle-platillo.component.html
+++ b/src/app/components/platillos/detalle-platillo/detalle-platillo.component.html
@@ -1,1 +1,8 @@
-<p>detalle-platillo works!</p>
+<div class="container">
+    <h1>Lorem, ipsum.</h1>
+
+    <div class="card-image"></div>
+    <div class="grid-images">
+
+    </div>
+</div>
