--- a/src/app/components/platillos/item-platillo/item-platillo.component.html
+++ b/src/app/components/platillos/item-platillo/item-platillo.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card__image" style="background: url({{platillo.imagen}}) center center; background-size: cover;" [routerLink]="['/detail-food', platillo.id]">
+    <div class="card__image" style="background: url({{platillo.imagen}}) center center; background-size: cover;" [routerLink]="['/food-details', platillo.id]">
         <div class="opacidad">
             <p>{{platillo.nombre}}</p>
         </div>
