--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,7 @@
+/*Alerts*/
+// regular style toast
+@import '~ngx-toastr/toastr'
+    
 /*Variables*/
 $font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
 
@@ -13,8 +17,8 @@ $footerClaro: #dccabe
 $header: #e4cfc0
 $headerOscuro: #b9967d
 
-$opciones: #e2da7a
-$opcionesOscuro: #d3c743
+$opciones: #e9e084
+$opcionesOscuro: #e0d447
 
 $opciones2: #79fb7e
 $opciones2Claro: #acfea9
@@ -22,6 +26,10 @@ $background: #E8EBEB
 
 $oscuro: #191919
 $oscuroClaro: #2b2b2b
+
+/*Icon size*/
+%icon-size
+    width: 32px
 
 /*Se reinicia el html*/
 body
