--- a/src/app/components/platillos/lista-platillo/lista-platillo.component.sass
+++ b/src/app/components/platillos/lista-platillo/lista-platillo.component.sass
@@ -6,10 +6,12 @@
     transition: all 0.25s ease-in-out
 %radius
     border-radius: .5rem
+%center
+    text-align: center
 
 /*Etiquetas*/
 .preview__description h2
-    text-align: center
+    @extend %center
     text-transform: uppercase
 .preview__description p
     text-align: justify
@@ -17,35 +19,46 @@
 .container
     display: grid
     grid-template-columns: repeat(1, 1fr)
-    column-gap: 1rem
-    margin: 1rem
+    margin: 1rem .5rem
 
 /*Este es el elemento izquierdo*/
-.grid
+.sidebar-left
     display: grid
     grid-template: repeat(1, 1fr)
     background-color: white
     @extend %radius
 
 /*Este es para el derecho*/
-.sidebar
+.sidebar-right
+    margin-top: 1rem
+    margin-right: 0
+
+.sidebar-left-container
     display: flex
     flex-direction: column
     background-color: white
     @extend %radius
-    padding: 0 .5rem
-    margin-top: 1rem
-.sidebar__borde
-    border-radius: 1rem
+    padding: 0 1rem
+.sidebar-border
+    @extend %radius
     border: 2px styles.$opciones solid
     height: 100%
-    margin: 1rem 0
-    padding: 0 .5rem
-.sidebar__titulo
+    padding: .5rem .5rem 0 .5rem
+.sidebar-left-container__titulo
     text-transform: uppercase
     font-weight: bold
-.sidebar__descripcion
-    text-align: justify
+.sidebar-left-container__descripcion
+    @extend %center
+.sidebar-left-container__descripcion span
+    text-transform: uppercase
+    font-weight: bold
+
+/*Para los pasos en el sidebar*/
+.list
+    list-style: decimal
+    padding: 0 1rem
+li
+    margin: .5rem 0
 
 /*Para los platillos*/
 .card
@@ -74,17 +87,45 @@
 /*Extras*/
 .divisor
     background-color: styles.$footerClaro
-    margin: 1rem 2.5rem
-    padding: .2rem  0
+    margin: 1rem 2rem
+    padding: .1rem  0
+.center
+    @extend %center
+.no-data
+    text-align: center
+    margin: 1rem 0
+    color: #e91e63
+
+/*Para ordenar*/
+.ordenar
+    display: flex
+    justify-content: flex-end
+    margin: 1rem 1rem 0 0
+.ordenar__input
+    border: 2px styles.$opciones solid
+    border-radius: .5rem
+    padding: .25rem 0
+    text-align: center
+    font-size: 14px
+.ordenar__btn
+    @extend %icon-size
+    margin-left: .5rem
+    cursor: pointer
 
 /*Media*/
 @media (min-width: 768px)
     .container
         grid-template-columns: 75% 25%
-        column-gap: 1.5rem
-    .sidebar
-        margin-right: 1.5rem
+        margin: .5rem 1rem
+    .sidebar-left-container
+        height: 100%
+        justify-content: center
+    .sidebar-right
         margin-top: 0
+        padding: 0 0 1rem 1rem
+    .sidebar-border
+        padding-bottom: .5rem
+        
 
 /*Pantallas pequeñas*/
 @media (min-width: 576px)
