--- a/src/app/shared/footer/footer.component.sass
+++ b/src/app/shared/footer/footer.component.sass
@@ -17,7 +17,7 @@
     display: flex
     flex-direction: column
     justify-content: center
-    align-items: start
+    align-items: flex-start
     padding: 0 .5rem
 
 .parrafos__descripcion
