--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -1,6 +1,6 @@
-<p *ngIf="1 < 2">Puedes ordenar algo más si deseas <span>(No le diremos a nadie)</span></p>
-<p *ngIf="1 > 2">Primero agrega algo <span>(Te recomiendo acompañarlo con una bebida)</span></p>
+<p *ngIf="carrito.length > 0">Puedes ordenar algo más si deseas <span>(No le diremos a nadie)</span></p>
+<p *ngIf="carrito.length === 0">Primero agrega algo <span>(Te recomiendo acompañarlo con una bebida)</span></p>
     
 <div class="container">
-    <h3>Hola</h3>
+    {{ carrito | json}}
 </div>
