--- a/src/app/components/platillos/lista-platillo/lista-platillo.component.html
+++ b/src/app/components/platillos/lista-platillo/lista-platillo.component.html
@@ -17,7 +17,7 @@
             <div class="ordenar">
                 <input class="ordenar__input" type="number" min="1" placeholder="Cantidad" [(ngModel)]="cantidad[i]">
 
-                <img class="ordenar__btn" src="../../../../assets/img/add.svg" alt="Agregar platillo" (click)="agregarPlatillo(platillo.id, i)" title="Agregar a la orden">
+                <img class="ordenar__btn" src="../../../../assets/img/add.svg" alt="Agregar platillo" (click)="agregarPlatillo(platillo, i)" title="Agregar a la orden">
             </div>
 
             <div class="divisor"></div>
