--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,7 +2,7 @@
 // regular style toast
 @import '~ngx-toastr/toastr'
     
-/*Variables*/
+/*Fuente*/
 $font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
 
 /*Paleta de colores*/
@@ -37,4 +37,4 @@ body
     margin: 0
     padding: 0
     box-sizing: border-box
-    color: $oscuro
+    color: $oscuroClaro
