--- a/src/app/shared/footer/footer.component.sass
+++ b/src/app/shared/footer/footer.component.sass
@@ -29,9 +29,8 @@
 
 /*Fin footer*/
 
-.divisor
+.divisor_footer
     background-color: styles.$footerClaro
-    // border: 1px styles.$opciones solid
     margin: 1rem 0rem
     padding: 0 .1rem
 
