--- a/src/app/shared/header/header.component.sass
+++ b/src/app/shared/header/header.component.sass
@@ -11,6 +11,7 @@
     flex-direction: column
     background-color: styles.$header
     position: static
+    z-index: 10
 
 @media (min-width: 768px)
     .header
