--- a/src/styles.sass
+++ b/src/styles.sass
@@ -38,3 +38,9 @@ body
     padding: 0
     box-sizing: border-box
     color: $oscuroClaro
+
+/*Estilos reutilizables*/
+.divisor
+    background-color: $footerClaro
+    margin: 1rem 2rem
+    padding: .1rem  0
