--- a/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
+++ b/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
@@ -1,17 +1,67 @@
 @use '../../../../styles'
 
-/*Generales*/
-h1
+%center
     text-align: center
+/*Generales*/
+.center
+    @extend %center
+.justificar
+    text-align: justify
+
+.mayusculas
     text-transform: uppercase
 
+/* Para el container */
 .container
     width: 80%
     margin: 0 auto
     background: white
     border-radius: .5rem
     margin-bottom: 1rem
+
+/*Para el card con la imagen de fondo*/
+.card-image
+    border-radius: .5rem
+    margin-bottom: 1rem
+
+.texto-opaco
+    color: white
+    font-size: 16px
+    font-weight: bold
+    @extend %center
+    background-color: rgba(17, 17, 17, .8)
+    padding: 2.25rem .5rem
+    border-radius: .5rem
+
 .grid-images
     display: grid
     grid-template-columns: repeat(2, 1fr)
     column-gap: 1rem
+    margin: 0 1rem
+
+/*Para la descripcion*/
+.descripcion
+    width: 60%
+    margin: 0 auto
+    border-radius: .5rem
+    border: 2px styles.$opciones solid
+    padding: 0 1rem
+.descripcion p
+    line-height: 1.5
+    font-size: 18px
+.error
+    color: #721c24
+span
+    font-weight: bold
+
+/*Para mas imagenes*/
+img
+    max-width: 100%
+    border-radius: .5rem
+    cursor: pointer
+    opacity: .75
+    
+    transition: all .25s ease-out
+    &:hover
+        transform: scale(1.1)
+        opacity: 1
