--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <div class="divisor"></div>
+    <div class="divisor_footer"></div>
 
     <div class="parrafos">
         <p class="parrafos__descripcion">Restaurante Lorem, ipsum.</p>
