--- a/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
+++ b/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
@@ -18,6 +18,7 @@
     background: white
     border-radius: .5rem
     margin-bottom: 1rem
+    margin-top: .5rem
 
 /*Para el card con la imagen de fondo*/
 .card-image
@@ -41,14 +42,36 @@
 
 /*Para la descripcion*/
 .descripcion
-    width: 60%
+    width: 80%
     margin: 0 auto
+    border-radius: .5rem
+    border: 2px styles.$opciones solid
+    padding: 0 1rem
     border-radius: .5rem
     border: 2px styles.$opciones solid
     padding: 0 1rem
 .descripcion p
     line-height: 1.5
     font-size: 18px
+.descripcion__boton
+    display: flex
+    justify-content: flex-end
+    margin-bottom: .5rem
+.btn
+    border: 4px styles.$opciones2Oscuro solid
+    background-color: styles.$opciones2
+    color: styles.$oscuroClaro
+    padding: .5rem
+    border-radius: .5rem
+    cursor: pointer
+    font-size: 14px
+    font-weight: bold
+    text-transform: uppercase
+    transition: all .25s ease-out
+
+    &:hover
+        border: 4px styles.$opcionesOscuro solid
+        background-color: styles.$opciones
 .error
     color: #721c24
 span
