--- a/src/app/components/platillos/item-platillo/item-platillo.component.html
+++ b/src/app/components/platillos/item-platillo/item-platillo.component.html
@@ -4,7 +4,7 @@
             <p>{{platillo.nombre}}</p>
         </div>
     </div>
-    <p>{{platillo.descripcion}}</p>
+    <p>{{platillo.ingredientes}}</p>
     <div class="card__footer">
         <h3>{{platillo.precio | currency}}</h3>
         <img src="../../../../assets/img/add.svg" alt="Agregar platillo" (click)="agregarPlatillo()" title="Agregar a la orden">
