--- a/src/styles.sass
+++ b/src/styles.sass
@@ -20,8 +20,8 @@ $headerOscuro: #b9967d
 $opciones: #e9e084
 $opcionesOscuro: #e0d447
 
-$opciones2: #79fb7e
-$opciones2Claro: #acfea9
+$opciones2: #FFFFFF
+$opciones2Oscuro: #b1b0b0
 $background: #E8EBEB
 
 $oscuro: #191919
