--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<div class="container">
+    <div class="center">
+        <img src="../../../assets/img/not-found.svg" alt="Pagina no encontrada">
+
+        <div class="mb">
+            <h2>La pagina a la que desea acceder no existe</h2>
+            <button class="btn" [routerLink]="['']">Regresar</button>
+        </div>
+    </div>
+</div>
