--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="header">
     <a routerLink="" title="Home">HOME</a>
-    <a routerLink="list/hamburguesas" title="Hamburguesas">Hamburguesas</a>
-    <a routerLink="list/pizzas" title="Pizza">Pizzas</a>
-    <a routerLink="list/ensaladas" title="Ensaladas">Ensaladas</a>
-    <a routerLink="list/postres" title="Postres">Postres</a>
-    <a routerLink="list/bebidas" title="Bebidas">Bebidas</a>
-    <a routerLink="pay" title="Orden">
+    <a routerLink="menu/hamburguesas" title="Hamburguesas">Hamburguesas</a>
+    <a routerLink="menu/pizzas" title="Pizza">Pizzas</a>
+    <a routerLink="menu/ensaladas" title="Ensaladas">Ensaladas</a>
+    <a routerLink="menu/postres" title="Postres">Postres</a>
+    <a routerLink="menu/bebidas" title="Bebidas">Bebidas</a>
+    <a routerLink="pagar" title="Orden">
         <img src="../../../assets/img/shop-cart2.svg" alt="Orden">
         <p>Pagar</p>
     </a>
