reinicio de las fuentes

--- a/src/app/components/not-found/not-found.component.sass
+++ b/src/app/components/not-found/not-found.component.sass
@@ -8,13 +8,13 @@
 img
     max-width: 25%
 .btn
-    border: 4px styles.$opciones2Oscuro solid
+    border: .4rem styles.$opciones2Oscuro solid
     background-color: styles.$opciones2
     color: styles.$oscuroClaro
-    padding: .5rem 1rem
-    border-radius: .5rem
+    padding: 1rem
+    border-radius: 1rem
     cursor: pointer
-    font-size: 16px
+    font-size: 1.6rem
     font-weight: bold
     transition: all .25s ease-out
     text-transform: uppercase
