--- a/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
+++ b/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
@@ -58,13 +58,13 @@
     justify-content: flex-end
     margin-bottom: .5rem
 .btn
-    border: 4px styles.$opciones2Oscuro solid
+    border: .4rem styles.$opciones2Oscuro solid
     background-color: styles.$opciones2
     color: styles.$oscuroClaro
-    padding: .5rem
-    border-radius: .5rem
+    padding: 1rem
+    border-radius: 1rem
     cursor: pointer
-    font-size: 14px
+    font-size: 1.4rem
     font-weight: bold
     text-transform: uppercase
     transition: all .25s ease-out
@@ -80,7 +80,7 @@ span
 /*Para mas imagenes*/
 img
     max-width: 100%
-    border-radius: .5rem
+    border-radius: 1rem
     cursor: pointer
     opacity: .75
     
