--- a/src/app/components/platillos/item-platillo/item-platillo.component.sass
+++ b/src/app/components/platillos/item-platillo/item-platillo.component.sass
@@ -19,14 +19,14 @@ a
 
 .opacidad p
     background-color: rgba(17, 17, 17, .5)
-    padding: .25rem 0
+    padding: .5em 0
 
 /*Para los platillos*/
 .card
     @extend %resolucion
 .card__image
     cursor: pointer
-    border-radius: .5rem
+    border-radius: 1rem
     @extend %transicion
 
     &:hover
@@ -34,12 +34,12 @@ a
     
 .opacidad
     background-color: rgba(17, 17, 17, .6)
-    padding: 2rem 0
-    font-size: 1.4rem
+    padding: 4rem 0
+    font-size: 1.8rem
     text-transform: uppercase
     text-align: center
     @extend %transicion
-    border-radius: .5rem
+    border-radius: 1rem
     color: white
 
     &:hover
