--- a/src/app/components/platillos/lista-platillo/lista-platillo.component.html
+++ b/src/app/components/platillos/lista-platillo/lista-platillo.component.html
@@ -6,7 +6,7 @@
         }; let i = index">
             <div class="preview">
                 <div class="preview__description">
-                    <h2>{{platillo.nombre}}</h2>
+                    <h2>{{platillo.nombre}} | <span>{{platillo.precio | currency}}</span></h2>
                     <p class="preview__description__more">
                         {{platillo.ingredientes}} <span>(Obtén mas información haciendo clic en la imagen)</span>
                     </p>
