--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,12 +32,16 @@ $oscuroClaro: #2b2b2b
     width: 32px
 
 /*Se reinicia el html*/
+html
+    font-size: 62.5%
 body
+    font-size: 16px
     font-family: $font
     margin: 0
     padding: 0
     box-sizing: border-box
     color: $oscuroClaro
+    // font-size: 62.5%
 
 /*Estilos reutilizables*/
 .divisor
