--- a/src/app/components/platillos/lista-platillo/lista-platillo.component.sass
+++ b/src/app/components/platillos/lista-platillo/lista-platillo.component.sass
@@ -5,25 +5,29 @@
 %transicion
     transition: all 0.25s ease-in-out
 %radius
-    border-radius: .5rem
+    border-radius: 1rem
 %center
     text-align: center
 
+/*Para el titulo del platillo*/
+h2 span
+    font-weight: normal
+    font-size: 1.8rem
 /*Descripcion*/
 .preview__description h2
     @extend %center
     text-transform: uppercase
 .preview__description__more
     text-align: justify
-    font-size: 1.2em
+    font-size: 2rem
 .preview__description__more span
     font-weight: bold
-    font-size: 1rem
+    font-size: 1.6rem
 
 .container
     display: grid
     grid-template-columns: repeat(1, 1fr)
-    margin: 1rem .5rem
+    margin: 2rem 1rem
 
 /*Este es el elemento izquierdo*/
 .sidebar-left
@@ -40,26 +44,26 @@
     @extend %radius
     border: 2px styles.$opciones solid
     height: 100%
-    padding: .5rem .5rem 0 .5rem
+    padding: 1rem 1rem 0 1rem
 .sidebar-right-container
     display: flex
     flex-direction: column
     background-color: white
     @extend %radius
-    padding: 0 1rem
+    padding: 0 2rem
 .sidebar-right-container__busqueda
     display: grid
     grid-template-columns: 100%
-    margin-bottom: .5rem
+    margin-bottom: 1rem
 
 .input-search
-    border-radius: .4rem
+    border-radius: .5rem
     border: 2px styles.$opciones2Oscuro solid
-    padding: .25rem
-    font-size: 16px
+    padding: .5rem
+    font-size: 1.6rem
     text-align: center
 .label-search
-    margin: .25rem 0 .5rem 0
+    margin: 1rem 0 .5rem 0
 
 .sidebar-right-container__titulo
     text-transform: uppercase
@@ -73,7 +77,7 @@
 /*Para los pasos en el sidebar*/
 .list
     list-style: decimal
-    padding: 0 1rem
+    padding: 0 2rem
 li
     margin: .5rem 0
 
@@ -84,7 +88,7 @@ li
 .preview
     display: grid
     grid-template-columns: 75% 25%
-    border-radius: .5rem
+    border-radius: 1rem
     margin-right: 1rem
 .preview__description
     display: flex
@@ -92,7 +96,7 @@ li
     margin: 0 2rem
 .preview__image
     @extend %resolucion
-    border-radius: .5rem
+    border-radius: 1rem
     cursor: pointer
     @extend %transicion
     display: block
@@ -118,9 +122,9 @@ li
     justify-content: flex-end
     margin: 1rem 1rem 0 0
 .ordenar__input
-    border: 2px styles.$opciones solid
+    border: .2rem styles.$opciones solid
     border-radius: .5rem
-    padding: .25rem 0
+    padding: .5rem 0
     text-align: center
     font-size: 14px
 .ordenar__btn
@@ -132,17 +136,12 @@ li
 @media (min-width: 768px)
     .container
         grid-template-columns: 75% 25%
-        margin: .5rem 1rem
+        margin: 1rem 2rem
     .sidebar-right-container
         height: 100%
         justify-content: center
     .sidebar-right
         margin-top: 0
-        padding: 0 0 1rem 1rem
+        padding: 0 0 2rem 1rem
     .sidebar-border
-        padding-bottom: .5rem
-        
-
-/*Pantallas pequeñas*/
-@media (min-width: 576px)
-    
+        padding-bottom: 1rem
