--- a/src/app/components/platillos/detalle-platillo/detalle-platillo.component.html
+++ b/src/app/components/platillos/detalle-platillo/detalle-platillo.component.html
@@ -14,7 +14,7 @@
                 <p class="justificar">
                     {{detail.ingredientes}}
                     <br>
-                    ({{detail.descripcion}})
+                    <span>({{detail.descripcion}})</span>
                 </p>
             </div>
             <div class="descripcion__boton">
