--- a/src/app/components/pay/pay.component.html
+++ b/src/app/components/pay/pay.component.html
@@ -8,7 +8,7 @@
         </ng-template>
 
         <p>
-            <span>{{total | currency}}</span>
+            <span class="color-verde">{{total | currency}}</span>
         </p>
     </div>
 
@@ -36,7 +36,7 @@
                 <button class="btn btn-increment" (click)="increment(c)">+</button>
             </div>
         </div>
-        <div class="pay center">
+        <div class="pay center" *ngIf="carrito.length > 0">
             <button class="btn btn-pay" (click)="payFood()">Pagar</button>
         </div>
     </div>
