--- a/src/app/components/pay/pay.component.sass
+++ b/src/app/components/pay/pay.component.sass
@@ -119,3 +119,22 @@ img
 /*Personalizar el sweetalert2*/
 .sweetalert2-custom-title
     font-size: 3.2rem
+
+/*Carrito vacio*/
+.cart-empty
+    width: 80%
+    margin: 0 auto
+    text-align: center
+
+.cart-empty__img
+    max-width: 75%
+@media (min-width: 576px)
+    .cart-empty__img
+        max-width: 60%
+@media (min-width: 768px)
+    .cart-empty__img
+        max-width: 30%
+@media (min-width: 1200px)
+    .cart-empty__img
+        max-width: 40%
+    
