--- a/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
+++ b/src/app/components/platillos/detalle-platillo/detalle-platillo.component.sass
@@ -36,9 +36,10 @@
 
 .grid-images
     display: grid
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: repeat(1, 1fr)
     column-gap: 1rem
-    margin: 0 1rem
+    margin: 0 2rem
+    padding: 1rem 0
 
 /*Para la descripcion*/
 .descripcion
@@ -88,3 +89,11 @@ img
     &:hover
         transform: scale(1.1)
         opacity: 1
+
+/*Media*/
+@media (min-width:  576px)
+    .grid-images
+        grid-template-columns: repeat(2, 1fr)
+        column-gap: 1rem
+        margin: 0 1rem
+        padding: .5rem 0
