cambios de traslado pc

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -13,8 +13,8 @@
         </div>
 
         <div class="relleno">
-            <a href="https://www.facebook.com/franhdez97/" target="_blank" title="Cuenta de Facebook">
-                <img src="../../../assets/img/facebook.svg" alt="Enlace de facebook"/>
+            <a href="https://www.linkedin.com/in/franhdez97/" target="_blank" title="Cuenta de LinkedIn">
+                <img src="../../../assets/img/linkedin.svg" alt="Enlace de LinkednIn"/>
             </a>
         </div>
 
